--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -35,6 +35,10 @@ footer {
   a {
    color: #C5C5C5;
    padding: 0 1em 0 1em;
+
+   &:hover {
+     color: #FFFFFF;
+   }
   }
 }
 
