--- a/scss/_music.scss
+++ b/scss/_music.scss
@@ -6,7 +6,7 @@
             width: 250px;
         }
 
-        .row {
+        .row.justify-content-center {
             margin-top: 6rem; //for smooth scroll
             .col-lg-6{
                 margin-top: 5em;
